--- a/week03/styles.css
+++ b/week03/styles.css
@@ -8,5 +8,5 @@ body{
     background-image:url(images/page-bg.gif);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-color: calc(#F7F3DE);
+    background-color: #F7F3DE;
 }
