--- a/week03/styles.css
+++ b/week03/styles.css
@@ -16,5 +16,6 @@ h1{
     padding: 40px;
     padding-left: 120px;
     background-image:url(images/header-image-1.gif);
-    
+    background-repeat: no-repeat;
+    background-position: top left;
 }
