--- a/week03/styles.css
+++ b/week03/styles.css
@@ -1,11 +1,17 @@
 @charset "utf-8";
-/* CSS Document */
+/* CSS Document 
+Week 3 Assignment
+Written by Felix Nasser
+
+REMEMBER TO CHANGE PHOTO LOCATIONS
+
+*/
 body{
     font-family: Georgia, serif;
     color:black;
     line-height:140%;
     margin:30px;
-    background-image:url(https://felixwolfblue.github.io/Spring2022/week03/images/page-bg.gif);
+    background-image:url(images/page-bg.gif);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-color: #F7F3DE;
@@ -14,7 +20,7 @@ header h1{
     font-size: 350%;
     color: #7C1A00;
     padding: 40px 40px 40px 120px;
-    background-image:url(https://felixwolfblue.github.io/Spring2022/week03/images/header-image-1.gif);
+    background-image:url(images/header-image-1.gif);
     background-repeat: no-repeat;
     background-position: top left; 
 }
@@ -54,8 +60,8 @@ nav a:hover{
 	background-color: #7C1A00;
 }
 
-#content {
-	background-image: url(https://felixwolfblue.github.io/Spring2022/week03/images/trans-bg.gif);
+#content { /*Prof, if you're reading this, you have no idea how much I learned while overlooking the fact that I wrote "container" instead of "content"*/
+	background-image: url(images/trans-bg.gif);
 	border: 1px #CCCCCC solid;
 	margin-left: 180px;
 	padding: 10px;
@@ -80,7 +86,7 @@ h2{
 	padding-left: 5px;
 }
 h3{
-	background-image: url(https://felixwolfblue.github.io/Spring2022/week03/images/header-star-1.gif);
+	background-image: url(images/header-star-1.gif);
 	background-repeat: no-repeat;
 	padding-left: 20px;
 }
