--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,21 @@
 body{
     font-family: Arial;
     font-size: 24px;
-    text-align: center;
-    align-content: center;
+    background-color: aquamarine;
 }
+
+
+
+a{
+    background-image: url(nyancat.gif);
+    background-size:45px;
+    background-repeat: no-repeat;
+    padding-left: 50px;
+}
+
+
 h1{
+    text-align: center;
     font-family: Arial;
-    
+
 }
