--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
 body{
     font-family: Arial;
     font-size: 24px;
-    background-color: aquamarine;
+    background-color: rgb(65,225,106);
+    /*127,255,212*/
 }
 
 .toDo{
