--- a/week04/origamiStyles.css
+++ b/week04/origamiStyles.css
@@ -1,3 +1,96 @@
-p{
-    size:50px;
+html body{
+    background-color: aliceblue;
+    margin-top: 0;
 }
+
+.content{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:large;
+    margin-top:1em;
+}
+
+header{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 40px;
+    text-align: center;
+    background-color: rgb(71, 153, 153);
+}
+
+.contentImg{
+    max-height: 10em;
+    float:left;
+}
+
+p{
+    text-align: justify;
+    margin:0;
+}
+
+.introduction{
+    min-height: 10em;
+}
+
+.materials ul{
+    border:1px black solid;
+    background-color: antiquewhite;
+    float:left;
+    list-style-type: none;
+    margin:0 1em 0 0;
+}
+.materials li{
+    float:left;
+    margin:1em;
+}
+
+.history{
+    border: 3px black solid;
+    background-color: darkgray;
+    float:right;
+    width: 40%;
+    padding:1em;
+    margin-top:2em;
+}
+
+.history h4{
+    margin-top:0;
+    margin-bottom: 0.5em;
+    text-align: justify;
+}
+
+.history hr{
+    height: 2px;
+    background-color: white;
+}
+
+.instructions .accessible{
+    text-decoration: underline;
+
+}
+.instructions img{
+    max-height: 10em;
+    display: flex;
+}
+.instructions ol{
+    width:fit-content;
+
+}
+.instructions li{
+    /* float:left; */
+    padding-right:2em;
+    padding-top:1em;
+    padding-bottom: 1em;
+}
+
+footer{
+    text-align: center;
+}
+
+.footer img{
+    max-width: 40px;
+}
+
+/*Missing:
+Aside
+Article
+div to hold other elements?
+*/
