korean font fixes

--- a/challenges/koreanLearning/koreanStyles.css
+++ b/challenges/koreanLearning/koreanStyles.css
@@ -1,6 +1,6 @@
 * {
-    font-family: Arial;
-    font-size:large;
+    font-family: 'Nanum Gothic', sans-serif;
+    font-size: xx-large;
     background-color: rgb(92, 179, 150);
 }
 
